--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -38,16 +38,7 @@
         android:layout_width="match_parent"
         android:layout_height="50dp" />
 
-    <CheckBox
-        android:id="@+id/notification"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/chk_notification"
-        android:checked="true"
-        android:textSize="16sp"
-        android:padding="10dp"/>
-
-    <CheckBox
+    <Switch
         android:id="@+id/run"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
