--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,5 +2,7 @@
 <resources>
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#ffb340</color>
+    <color name="colorAccent">#40d2ff</color>
+    <color name="Red">#dc0505</color>
+    <color name="White">#fcf9f9</color>
 </resources>
